# fnos-mock-server

./: .editorconfig  .gitignore  IFLOW.md  README.md  constitution.md  plan.md  private_key.pem  public_key.pem  pyproject.toml  spec.md  tasks.md
responses/: appcgi.dockermgr.composeList.json  appcgi.dockermgr.containerList.json  appcgi.dockermgr.stats.json  appcgi.dockermgr.systemSettingGet.json  appcgi.eventlogger.common.list.json  appcgi.network.net.detect.json  appcgi.network.net.list.json  appcgi.resmon.cpu.json  appcgi.resmon.disk.json  appcgi.resmon.gen.json  appcgi.resmon.gpu.json  appcgi.resmon.mem.json  appcgi.resmon.net.json  appcgi.sac.desktop.v1.getConfig.json  appcgi.sac.entry.v1.appStoreList.json  appcgi.sac.ups.v1.status.json  appcgi.share.smb.opt.json  appcgi.sysinfo.getHardwareInfo.json  appcgi.sysinfo.getHostName.json  appcgi.sysinfo.getMachineId.json  appcgi.sysinfo.getTimeSetting.json  appcgi.sysinfo.getTrimVersion.json  appcgi.sysinfo.getUptime.json  file.getAcl.json  file.ls.json  file.mkdir.json  file.rm.json  file.team.lsDir.json  liveupdate.check.json  notify.list.json  notify.unreadTotal.json  stor.calcSpace.json  stor.diskHealth.json  stor.diskSmart.json  stor.general.json  stor.getUserStorage.json  stor.listDisk.json  stor.listStor.json  stor.state.json  stor.state2.json  (+7 more)
server/: __init__.py  handlers.py  main.py  responses.py  utils.py
tests/: test_mock_server_integration.py
